# ai-detention-

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.workers.yml  docker-compose.yml  flowerconfig.py  health_check.py  pyproject.toml  seed_demo_data.py
.github/workflows/: deploy.yml  pr-validation.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_materialized_views.py  3db63acfcae3_add_evaluation_configs.py
docs/: CI_CD.md  DEPLOYMENT.md  MONITORING.md  PERFORMANCE.md  TESTING.md  disaster_recovery_playbook.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/e2e/: basic.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/k8s/: api-deployment.yaml  hpa-and-pdb.yaml  worker-deployments.yaml
infra/prometheus/: alert_rules.yml  alertmanager.yml  prometheus.yml
k8s/: deployment.yaml
load_tests/: locustfile.py
src/: __init__.py  cache.py  config.py  database.py  main.py  rate_limit.py  redis_client.py  s3_client.py  security.py
src/api/: deps.py
src/middleware/: __init__.py  audit.py  correlation.py  error_handler.py  metrics.py  rate_limiter.py
src/models/: __init__.py  api_key.py  audit_log.py  base.py  claim.py  contradiction.py  dataset.py  evaluation.py  metric.py  organization.py  score.py  submission.py  user.py  worker_result.py
src/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/repositories/: __init__.py  audit_log_repository.py  base_repository.py  claim_repository.py  contradiction_repository.py  evaluation_run_repository.py  organization_repository.py  query_analysis.py  score_repository.py  submission_cache.py  submission_repository.py  user_repository.py  worker_result_repository.py
src/schemas/: __init__.py  auth.py  common.py  dataset.py  evaluation.py  metric.py  result.py  submission.py
src/services/: audit_service.py  auth_service.py  cache_service.py  dataset_service.py  evaluation_service.py  metric_service.py  result_service.py  storage_service.py  submission_service.py  webhook_service.py
src/utils/: crypto.py  pagination.py  validators.py
tests/: conftest.py  factories.py  test_auth.py  test_evaluations.py  test_health.py
(+63 files in other folders)
