[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-engine"
version = "1.0.0"
description = "Production-grade AI Evaluation Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "boto3>=1.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "uuid6>=2024.7.10",
    "pydantic[email]>=2.10.0",
    # OpenTelemetry
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-celery>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-mock>=3.14.0",
    "testcontainers[postgres,redis]>=3.7.1",
    "moto[s3,all]>=4.2.14",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",
    "locust>=2.31.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "S", "B", "A",
    "COM", "C4", "ISC", "ICN", "PIE", "T20", "PT",
    "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH",
]
ignore = ["S101", "COM812", "ISC001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
